[tool.poetry]
name = "paper_trading"
version = "1.2.2"
license = "MIT"
description = "creat your own paper trading server"
homepage = 'https://github.com/pTraderTeam/paper_trading'
authors = ['Michael <cao6237699@126.com>']
classifiers = [
        'Environment :: Console',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: Implementation :: CPython'
    ]

[tool.poetry.scripts]
trading = 'paper_trading.run:main'

[[tool.poetry.source]]
name = 'tsinghua'
url = 'https://pypi.tuna.tsinghua.edu.cn/simple'

[[tool.poetry.source]]
name = 'aliyun'
url = 'https://mirrors.aliyun.com/pypi/simple/'
default = true

[tool.poetry.dependencies]
python = "^3.7"
APScheduler = "^3.6.3"
Flask = "^1.0.2"
flask-blueprint = "^1.2.9"
Flask-Bootstrap = "^3.3.7.1"
Flask-Login = "^0.4.1"
Flask-Mail = "^0.9.1"
Flask-Moment = "^0.8.0"
Flask-Script = "^2.0.6"
Flask-SocketIO = "^3.3.2"
numpy = "^1.16.3"
pandas = "^0.24.2"
pymongo = "^3.8.0"
pytdx = "^1.68"
requests = "^2.21.0"
tushare = "^1.2.40"
ta-lib = "^0.4.18"
matplotlib = "^3.2.2"
mpl_finance = "^0.10.1"

[tool.poetry.dev-dependencies]
mkdocs = "^1.1.2"
pre-commit = "^2.6.0"
black = "^19.10b0"

[tool.black]
line-length = 160
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
